--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
         value: 7565894498:AAE35txlRa2uTbZ7lBJWvrM9ExAtGYRtfuI
       - key: DATABASE_URL
         fromDatabase:
-          name: 100gates-db
+          name: gatesdb
           property: connectionString
       - key: WEBHOOK_URL
         value: https://100gates-bot.onrender.com
@@ -26,7 +26,7 @@ services:
         sync: false
 
 databases:
-  - name: 100gates-db
-    databaseName: 100gates
-    user: 100gates_user
+  - name: gatesdb
+    databaseName: gatesdb
+    user: gatesuser
     plan: free 
