--- a/render.yaml
+++ b/render.yaml
@@ -26,6 +26,8 @@ services:
         value: 69
       - key: ADMIN_TELEGRAM_IDS
         sync: false
+      - key: PYTHON_VERSION
+        value: 3.9.18
 
 databases:
   - name: gatesdb
