--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-fastapi==0.78.0
-uvicorn[standard]==0.17.6
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
 python-telegram-bot==20.7
-python-dotenv==0.20.0
-psycopg2-binary==2.9.3
-sqlalchemy==1.4.36
-alembic==1.8.1
-pydantic==1.9.1
-redis==4.3.4
+python-dotenv==1.0.0
+psycopg2-binary==2.9.9
+sqlalchemy==2.0.23
+alembic==1.12.1
+pydantic==2.5.0
+redis==5.0.1
 celery==5.2.3
-python-multipart==0.0.5 
+python-multipart==0.0.6
+httpx==0.25.2 
