Force Python 3.11 usage in Render deployment

--- a/render.yaml
+++ b/render.yaml
@@ -4,9 +4,9 @@ services:
     env: python
     plan: free
     buildCommand: |
-      pip install --upgrade pip
-      pip install -r requirements.txt
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
+      python3.11 -m pip install --upgrade pip
+      python3.11 -m pip install -r requirements.txt
+    startCommand: python3.11 -m uvicorn app.main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: TELEGRAM_BOT_TOKEN
         value: 7565894498:AAE35txlRa2uTbZ7lBJWvrM9ExAtGYRtfuI
@@ -27,7 +27,7 @@ services:
       - key: ADMIN_TELEGRAM_IDS
         sync: false
       - key: PYTHON_VERSION
-        value: 3.9.18
+        value: 3.11.7
 
 databases:
   - name: gatesdb
