--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-fastapi==0.95.2
-uvicorn[standard]==0.22.0
+fastapi==0.88.0
+uvicorn==0.20.0
 python-telegram-bot==20.7
-sqlalchemy==1.4.41
-psycopg2-binary==2.9.6
-alembic==1.10.4
-python-multipart==0.0.6
-python-dotenv==1.0.0
-pydantic==1.10.7
-redis==4.5.4
+sqlalchemy==1.4.46
+psycopg2-binary==2.9.5
+alembic==1.9.4
+python-multipart==0.0.5
+python-dotenv==0.21.1
+pydantic==1.10.2
+redis==4.3.6
 httpx==0.25.2 
