--- a/render.yaml
+++ b/render.yaml
@@ -4,9 +4,9 @@ services:
     env: python
     plan: free
     buildCommand: |
-      python3.11 -m pip install --upgrade pip
-      python3.11 -m pip install -r requirements.txt
-    startCommand: python3.11 -m uvicorn app.main:app --host 0.0.0.0 --port $PORT
+      pip install --upgrade pip
+      pip install -r requirements.txt
+    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: TELEGRAM_BOT_TOKEN
         value: 7565894498:AAE35txlRa2uTbZ7lBJWvrM9ExAtGYRtfuI
