--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-fastapi==0.88.0
-uvicorn==0.20.0
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
 python-telegram-bot==20.7
-sqlalchemy==1.4.46
-psycopg2-binary==2.9.5
-alembic==1.9.4
-python-multipart==0.0.5
-python-dotenv==0.21.1
-pydantic==1.10.2
-redis==4.3.6
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.9
+alembic==1.12.1
+python-multipart==0.0.6
+python-dotenv==1.0.0
+pydantic==2.5.0
+redis==5.0.1
 httpx==0.25.2 
